-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1070 2011-06-02 02:38:41 remko Exp $
-----------------------------------------------------------------------------------------

2011-06-02	remko
	* pslib.c:		Smarter version of psl_shorten_path produces more straight
				line segments.
	* test/*/orig/*.ps, doc/fig/*.ps:	Updates as result of psl_shorten_path change.

2011-06-01	pwessel
	* grdedit_func.c:	The -N option did not consider replicate w/e points for
				gridline-registered grids.
	* gmt_support.c:	Added check to report if repeating east/west duplicate
				nodes in global gridline-registered grids are in fact
				not identical.
	* grdcontour_func.c:	Improving detection of closed contours that should be ticked
				and marked (via -T) when such contours cross periodic boundaries
				or are polar caps.

2011-06-01	remko
	* gmt_init.c:		Default scale in -i option should be 1, not 0.
	* pswiggle_func.c:	Added [-|=|+] to prepend to -G option to select fill for
				positive AND/or negative wiggles. Made -N option obsolete.

2011-05-31	pwessel
	* grdfilter_func.c:	Added some test/debug options under DEBUG mode.
				Convolution weights were y-transposed so gave wrong results
				at/near the poles for spherical filtering.  Also, some nodes
				were duplicated in the convolution, resulting in inconsistent
				values at the S or N pole.  Added test script.
	* grdlandmask_func.c:	Did not correctly truncate nodes for GSHHS bins with no data.

2011-05-31	remko
	* psscale_func.c:	Bring frame line back when annotation is not done with -B.
	* gmt_io.h:		Consistent naming of GMT_IO_SEG_HEADER and GMT_REC_IS_SEG_HEADER.
				Consistent naming of GMT_IO_TBL_HEADER and GMT_REC_IS_TBL_HEADER.

2011-05-30	pwessel
	* gmt_stat.c:		Added functions GMT_median_weighted and GMT_mode_weighted
				based on algorithms from blockmedian/mode.  These will be
				used in grdfilter for spherical operations.

2011-05-29	pwessel